# mk

./: .gitignore  Cargo.toml  README.md  all-lines-collector.go  cmd-printer.go  cmd_printer.go  collector.go  completions.sh  core.go  flake.nix  go.mod  main.go  main.go.old  mkfile  mkfilex  mkfilex.deshugared  mkfilex.next  receipts  segment-lines-collector.go  segment-scanner.go  segments-collector.go  segments-scanner.go  segments_collector.go  segments_scanner.go  segments_scanner_test.go  segments_writer.go  std-printer.go  target_segments_collector.go  target_segments_collector_test.go
examples/: mkfilex
legacy-go-version/: .gitignore  README.md  cmd_writer.go  mkfilex  segments_scanner_test.go
src/: chars.rs  cli.rs  config.rs  dependencies_collector.rs  glob_pattern.rs  graph.rs  groups.rs  groups_desugarer.rs  main.rs  node.rs  printer.rs  segments_scanner.rs  syntax.rs
src/segments_scanner/: dependencies_collector.rs
src/testdata/: mkfile.test
