[package]
name = "mk"
description = "Text preprocessor for content segmentation"
version = "0.1.8"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = { version = "4.5.46", features = ["unstable-dynamic"] }
glob = "0.3.2"
once_cell = "1.21.1"
rand = "0.9.0"
toml = "0.8.20"
