[package]
name = "mk"
description = "Text preprocessor for content segmentation"
version = "0.1.9"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = { version = "4.5.61", features = ["unstable-dynamic"] }
glob = "0.3.3"
once_cell = "1.21.3"
rand = "0.9.2"
toml = "0.9.8"
